Code cleanup and added printout of number of cbmc calls.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/qdpt-hacking@466 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c